--- a/src/app/assure/interface/interface.component.html
+++ b/src/app/assure/interface/interface.component.html
@@ -64,7 +64,7 @@
           </a>
 
           <!-- Déclarer un constat -->
-          <a (click)="navigateTo('/dashboard-assure/declarer-constat')" class="group transition-all hover:-translate-y-1">
+          <a (click)="navigateTo('/dashboard-assure/declarer constat')" class="group transition-all hover:-translate-y-1">
             <div class="bg-white p-4 sm:p-5 rounded-xl shadow-xs border border-gray-100 hover:border-teal-100 hover:shadow-md transition-all h-full flex flex-col">
               <div class="flex items-start mb-3">
                 <div class="p-2 sm:p-3 rounded-lg bg-teal-50 text-teal-800 mr-3 sm:mr-4 group-hover:bg-teal-100 transition-colors">
